--- a/PythonMoora/management/hasil_akhir/templates/report/matematika/report_ternormalisasi.html
+++ b/PythonMoora/management/hasil_akhir/templates/report/matematika/report_ternormalisasi.html
@@ -43,7 +43,7 @@
     <body>
         <div class='wrapper'>
             <div class='header'>
-                <p class='title'>Report Matrix Awal </p>
+                <p class='title'>Data Ternormalisasi Siswa Olimpiade Matematika </p>
             </div>
         <div>
             <table class="details" border="1">
