--- a/PythonMoora/management/hasil_akhir/templates/hasil_akhir/fisika.html
+++ b/PythonMoora/management/hasil_akhir/templates/hasil_akhir/fisika.html
@@ -12,7 +12,7 @@
       <div class="well">
 
        <div align="right">
-        <a href="{% url 'hasil_akhir:reporttbl' %}">
+        <a href="{% url 'hasil_akhir:reportdata_awalfis' %}">
          <button class="btn btn-info"><i class="fa fa-print"></i> Print</button>
        </a>
      </div>
@@ -58,7 +58,7 @@
   <div class="well">
 
    <div align="right">
-    <a href="{% url 'hasil_akhir:reporttbl' %}">
+    <a href="{% url 'hasil_akhir:report_ternormalisasifis' %}">
      <button class="btn btn-info"><i class="fa fa-print"></i> Print</button>
    </a>
  </div>
@@ -108,7 +108,7 @@
     <div class="well">
 
      <div align="right">
-      <a href="{% url 'hasil_akhir:reporttbl' %}">
+      <a href="{% url 'hasil_akhir:report_pembobotanfis' %}">
        <button class="btn btn-info"><i class="fa fa-print"></i> Print</button>
      </a>
    </div>
@@ -154,7 +154,7 @@
   <div class="well">
 
    <div align="right">
-    <a href="{% url 'hasil_akhir:reporttbl' %}">
+    <a href="{% url 'hasil_akhir:report_rangking' %}">
      <button class="btn btn-info"><i class="fa fa-print"></i> Print</button>
    </a>
  </div>
@@ -185,4 +185,3 @@
 </div>
 </div>  
 </ul>
-
