--- a/PythonMoora/templates/layout/tesolimpiade/header2.html
+++ b/PythonMoora/templates/layout/tesolimpiade/header2.html
@@ -18,6 +18,8 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Selamat Datang, {{request.user.last_name}} <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
+                <li><a href="{% url 'guru:user' %}">Akun <i class="fa fa-user pull-right"> </i>
+                <li role="separator" class="divider"></li>
                 <li><a href="{% url 'login:doLogout' %}">Logout <i class="fa fa-sign-out pull-right"> </i>
                 </a></li>
               </ul>
